fix: setting to remove horizontal scroll

--- a/src/styles/components/ProfileSidebar.scss
+++ b/src/styles/components/ProfileSidebar.scss
@@ -83,5 +83,6 @@
     max-width: 707px;
     margin-left: auto;
     margin-right: auto;
+    width: calc(100% - 60px);
   }
 }
